feat : 이전 회차에 매칭되었던 회원과는 매칭 되지 않도록 하는 기능 추가